--- a/index.html
+++ b/index.html
@@ -88,7 +88,14 @@
         </section>
     </main>
 
-    <div id="stock-price">Stock Price: Loading...</div>
+    <div>
+        <button id="apple-stock">Apple</button>
+        <button id="microsoft-stock">Microsoft</button>
+    </div>
+
+    <div id="stock-price">Choose Stock...</div>
+
+
 
 
     <footer>
