--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
 
     <footer>
-        <p>&copy; 2023 Thank you sincerely for your time. + <a href="popup.html" target="Popup">additional popup window</a></p>
+        <p>2023 Thank you sincerely for your time. + <a href="popup.html" target="Popup">additional popup window</a></p>
     </footer>
 
     <div id="countdown">Review: 60</div>
