--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <div class="flex-container">
         <div>SELF</div>
-        <div>ADJUSTING</div>
+        <div>ADJUSTING FLEXBOX</div>
         <div>TEXT</div>
     </div>
     
