--- a/popup.html
+++ b/popup.html
@@ -18,5 +18,6 @@
 <body>
     <h1>Thank you for visiting!</h1>
     <img src="https://media.tenor.com/8ZDLU43omvcAAAAC/kid-thumbs-up.gif" alt="Thank you">
+    <h1>And hyvää syyslomaa</h1>
 </body>
 </html>
